--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.4.2",
+    "joi": "^17.6.0",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
+    "@types/js-cookie": "^3.0.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "eslint": "8.11.0",
