--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie": "^0.4.2",
+    "cookies": "^0.8.0",
     "joi": "^17.6.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
     "next": "12.1.0",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.4.1",
+    "@types/cookies": "^0.7.7",
     "@types/js-cookie": "^3.0.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "17.0.23",
+    "@types/passport": "^1.0.7",
     "@types/react": "17.0.43",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
