--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-# PORT=3000
+PORT=3000
 
 # Use my public mongo Cluster to acces the data OR create a localDB
 MONGO_LOCAL=mongodb://localhost:27017/foodProject
