--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
