--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.3",
     "bcrypt": "^5.0.1",
     "cookies": "^0.8.0",
+    "fraction.js": "^4.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
@@ -20,7 +24,8 @@
     "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-cookie": "^4.1.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
